--- a/css/index.css
+++ b/css/index.css
@@ -8,31 +8,48 @@ PRÉING2 MI 3*/
     padding: 0; }
 
 header    {
-        background-color: #e6ccb2;       
+        background-color: #e6ccb2; 
+        display: flex;      
          }
 .nul{
-    
-    display: flex;          
+    width: 100%;
+    flex-direction: column;       
     justify-content: center; 
     align-items: center;
 }
 
-header>h1 {             /*Pour mettre les propriétés du h1 du header plus facilement/spécifiquement*/
+.nvo{
+    
+
+}
+
+#logo{
+    width: 100%;
+    height: 100%;
+     
+     }
+
+h1 {             /*Pour mettre les propriétés du h1 du header plus facilement/spécifiquement*/
         color:grey;
         text-align: center;
         padding-top: 1%;
-        /*padding-bottom: 7%;*/ }
+        }
 
 
         
 .conex{
+    float: right;
+    width: max-content;
     text-align: right;
-    padding-right: 2%;
+    padding-top: 1.5%;
+    padding-right: 1.5%;
+    
     
 }
 
 .menuH{
-   
+    
+   padding-top: 1.7%;
     display: flex;
     color:rgb(61, 59, 40);
   
@@ -52,39 +69,24 @@ header>h1 {             /*Pour mettre les propriétés du h1 du header plus faci
 }
 
 
-#logo{
-    position: absolute;
-left: 0;
-top:0; }
+
 
 main{
-  
-  
+   
     width: 70%;
-  /*height: 650px;
-    margin: 0px 0px 0px 100px;*/
     background-color: #ddb892;
     text-align: center; }
 
 
 footer {
- 
     
     background-color: #e6ccb2;;
     color: white;
     text-align: center; }
 
 
-
-
-/*.menuG*/ nav {
-   
-     width: 30%;
-       /* margin: 0px 0px 0px 0px;
-        /*padding: 0px 0px 150px 0px
-        height: 650px;
-        width: 300px;*/
-        
+nav {
+     width: 30%; 
      background-color: #a5907f; }
 
 .menu{
