--- a/css/index.css
+++ b/css/index.css
@@ -21,8 +21,21 @@ body {
     min-height: 100%;
     position: relative;
     background:rgb(250, 238, 238);
+}
 
-    
+input[type=checkbox] {
+  display: none;
+}
+
+.container img {
+  margin: 100px;
+  transition: transform 0.25s ease;
+  cursor: zoom-in;
+}
+
+input[type=checkbox]:checked ~ label > img {
+  transform: scale(2);
+  cursor: zoom-out;
 }
 
 header {
