--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,8 @@ body {
     min-height: 100%;
     position: relative;
     background:rgb(250, 238, 238);
+
+    
 }
 
 input[type=checkbox] {
@@ -39,7 +41,6 @@ input[type=checkbox]:checked ~ label > img {
 }
 
 header {
-  z-index: 11;
     display: flex; 
     background: linear-gradient(135deg, transparent 10%,rgb(243, 185, 179) ) ;
     /*border-bottom-style: solid;
@@ -90,6 +91,7 @@ header {
 
 .placement {               /*Placement des boutons connexion et panier*/
     text-align: center; 
+    font-family: 'Courier New', Courier, monospace;
     float: right;
     padding-right: 1.5%;
 
@@ -122,9 +124,7 @@ header {
                               /*Caractéristiques du menu*/
     width: 140px;
     float: left;  
-    background-color: grey;  
-    border-top-right-radius: 10px;         
-    border-top-left-radius: 10px ;           
+    background-color: grey;               
     /*background: linear-gradient(to bottom right, purple, #eea1d7);*/
     /*background-image:linear-gradient(to right,  rgb(247, 212, 208), rgba(128, 128, 128, 0.747));*/
     /*border-bottom: 4px black solid;*/ }     /*Bordure simple noire sous les premiers éléments*/
@@ -141,8 +141,6 @@ text-decoration: none; }
 
 .menuH  a:hover {
   background: rgb(243, 185, 179);
-  border-top-right-radius: 10px;         
-  border-top-left-radius: 10px ;
   border: 2px solid white; }
 
 
@@ -158,7 +156,7 @@ text-decoration: none; }
 
    
 main {                                 /*Partie de droite (quand y'avait encore une partie gauche)*/
-    padding : 4% 5% 5% 5%;                     
+    padding : 5% 5% 5% 5%;                     
     text-align: center;
     /* background-color: #ddb892;*/
     /*width: 85%*/; /*Plus besoin de la largeur pcq plus de partie gauche*/}
@@ -168,34 +166,20 @@ main>p {
     padding-left: 2%;
     padding-right: 2%;
     font-size: 115%;
-    text-align: justify;
-    font-family: 'Pacifico'; }
-
-footer a {
-    text-decoration: none;
-    color: grey;
-}
-
-footer a:hover {
-  text-decoration: none;
-  color: black;
-}
+    text-align: justify; }
    
 footer {    
                    /*Footer*/
-    z-index: 10;
     position:absolute;   /*Obligé de mettre en absolu pour le fixer en bas de page*/
     bottom: 0;           /*Fixé en bas de page*/      
     width: 100%;
     height: auto;
     color:grey;
-    font-weight: bold;
     display: inline-block;
-    background: linear-gradient(135deg, rgb(243, 222, 219) 10%,  rgb(243, 185, 179)) ; 
+    background: linear-gradient(135deg, transparent 10%,rgb(243, 185, 179) ) ;
     /*border-top-style: solid;
     border-color: black; */ 
     /*background-color: #e6ccb2;*/ }
-
 
 .infos {         /*Caractéristiques des div du footer*/
   float: left;   /*Pour les afficher en ligne*/ }
@@ -227,19 +211,18 @@ footer {
   z-index: 9;     /*Pour faire passer le formulaire en premier plan*/
   position: fixed;
   display: none;  /*Pas affiché par défaut*/
-  height: fit-content;
   width: 15%;
   right: 5%;
-  top: 16%;
+  top: 15%;
   background: rgba(255, 255, 255, .8);
   padding: 0 3rem 3rem 3rem;
+  height: fit-content;
   border-radius: 20px;
   border-left: 1px solid rgba(255, 255, 255, .3);
   border-top: 1px solid rgba(255, 255, 255, .3);
   backdrop-filter: blur(10px);
- /*backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  -moz-backdrop-filter: blur(10px);*/
+  -moz-backdrop-filter: blur(10px);
   box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, .2);
   text-align: center; }
 
@@ -282,6 +265,9 @@ input {
   padding: 1rem;
   width: 80%;
   border-radius: 50px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  -moz-backdrop-filter: blur(5px);
   color: grey;
   font-weight: 500;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, .2);
@@ -315,7 +301,7 @@ input[type="button"] {
   border-radius: 50%;
   background: linear-gradient(135deg, transparent 20%,rgb(243, 185, 179) ) ;
   position: absolute; 
-  pointer-events: none; }
+  pointer-events: none;}
 
 .bulle.un {       /*Position et taille de la premiere bulle et ainsi de suite*/
   width: 15%;
