--- a/css/contacter.css
+++ b/css/contacter.css
@@ -1,3 +1,6 @@
+/*AIT CHADI Anissa, BELHADJ Dillan, CERF Fabien COSTA Mathéo
+PréING2 MI Groupe 3*/
+
 * {                              /*Pour retirer les margin par défaut du body*/
     margin: 0;
     padding: 0; }
